tests/compile-fail/program_structure_standard_prelude.rs
// error-pattern: an extern crate named `std` has already been imported
extern crate std;

fn main() {}
